# FakturaFordeler

./: .gitignore  GetAzident_Byrum.sql  Get_AZIDENT.sql  Get_AZIDENT_NEW.sql  OldCode.py  OldStarkCode.py  README.md  SandBox.py  Test.py  pyproject.toml
robot_framework/: __main__.py  config.py  process.py
